# agent-memory-lab

./: .gitignore  Makefile  README.md  RESULTS.md  pyproject.toml  results_mlx.json  results_mlx_full.json
.github/workflows/: ci.yml
agent_memory_lab/: __init__.py  backends.py  cli.py
agent_memory_lab/core/: __init__.py  interfaces.py  profiler.py  similarity.py
agent_memory_lab/datasets/: __init__.py  base.py  locomo.py  longmemeval.py  run.py
agent_memory_lab/datasets/fixtures/: locomo_sample.json  longmemeval_sample.json
agent_memory_lab/modules/: __init__.py  extractors.py  kuzu_storage.py  maintainers.py  retrievers.py  sqlite_storage.py  storage.py
agent_memory_lab/providers/: __init__.py  base.py  mlx_provider.py  mock.py
agent_memory_lab/stalebench/: __init__.py  generator.py  metrics.py  runner.py
assets/: make_figures.py
dashboard/: app.py
examples/: quickstart.py
scripts/: download_data.py
tests/: test_backends.py  test_datasets.py  test_db_backends.py  test_extractor.py  test_generator.py  test_invalidation.py  test_metrics.py  test_providers.py
